@startuml
class HedgeEnteringState <<partial>> {
    + <<override>> EnterState(configs:StateConfig.IBaseStateConfig[]) : void
    + <<override>> ExitState() : void
}
class "IChildState`2"<T1,T2> {
}
BasePlayerState <|-- HedgeEnteringState
"IChildState`2" "<PlayerController,HedgeState>" <|-- HedgeEnteringState
HedgeEnteringState --> "ParentState" HedgeState
@enduml
